--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Mulish', sans-serif;
 }
 
-a {
+a, li {
   font-weight: lighter;
 }
 
@@ -25,41 +25,46 @@ header {
   color: #000000;
   background-color: white;
   height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; /* ロゴとリストを左右に配置 */
+  align-items: center; /* 縦方向の中央揃え */
+  padding: 0px 40px;
+  width: 100%;
 }
 
-.header-logo a {
-  float: left;
+nav {
+  width: 100%;
+}
+
+.header-logo {
   font-size: 36px;
-  padding: 20px 40px;
   color: #000000; 
   text-decoration: none;
   letter-spacing: 1px;
 }
 
 .header-list {
-  padding: 0px 40px;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  align-items: center; /* 縦方向の中央揃え */
+  width: 100%;
 }
 
 .header-list a {
   color: #000000;    
   text-decoration: none;
-  padding: 33px 20px;
+  padding: 0px 20px;
+}
+
+.header-github {
+  margin-left: auto;
 }
 
 .header-list a:hover {
   color: gray;
-  /* font-weight: bolder; */
-  /* text-decoration: underline;  */
 }
-
-.header-left a {
-  float: left;
-}
-
-.header-right {
-  float: right;
-}
-
 
 
 
